# voltage-divider

./: .gitignore  README.md  pyREADME.md  pyproject.toml  slm.toml  stanza.proj  voltage-divider.stanza
.github/workflows/: build.yaml  release.yaml
docs/: .gitignore  requirements.txt
docs/source/: conf.py  index.md
src/: circuits.stanza  constraints.stanza  errors.stanza  inverse.stanza  solver.stanza  utils.stanza
src/jitxlib/voltage_divider/: __init__.py  circuit.py  constraints.py  errors.py  inverse.py  solver.py
src/voltage_divider/: __init__.py  circuit.py  constraints.py  inverse.py  settings.py  solver.py  toleranced.py
tests/: __init__.py  basic.stanza  test_basic.py
